@@ -10,6 +10,10 @@ This document contains the release notes for Emacs-enhanced
 
 * Versions
 
+** <2025-04-12>
+
+Added =csv-parse-buffer=/package csv replacement
+
 ** <2025-03-04>
 
 Added LLM client replacement with simple local ollama communication/package
